Fixed a problem with filter button spacing.

--- a/source/stylesheets/global.css.sass
+++ b/source/stylesheets/global.css.sass
@@ -449,17 +449,16 @@ h1,h2,h3,h4
 		font:
 			family: $header_font_family
 			weight: 400
-	ul li
-		float: left
-		margin: 0 0.3em
-	ul li a	
-		padding: 0.5em
-		@include button(simple, $button_color)
-		font-size: 1em
-
-	ul li a.selected
-		@include button(simple, $button_selected_color)
-		font-size: 1em
+		li
+			float: left
+			margin: 0.3em
+			a	
+				padding: 0.5em
+				@include button(simple, $button_color)
+				font-size: 1em
+				&.selected
+					@include button(simple, $button_selected_color)
+					font-size: 1em
 
 #cv_html
 	display: none
