--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -121,6 +121,8 @@ h1,h2,h3,h4
 		left: 30px
 	ul
 		margin: 1em 0 2em 0
+		li
+			margin: 0 0.3em
 	h1
 		margin: 0 5px
 
